About, Contact form and Jobs form page fixes
- media.css: (about page) title is too large. add styles for about page
and contact page.
- styles.css: (contact form 7) validation success overlap over the page
fix. add styles for contact form 7 validation response and about page.

--- a/wp-content/themes/irresistible/media.css
+++ b/wp-content/themes/irresistible/media.css
@@ -225,12 +225,11 @@
 	
 	/* ABOUT PAGE */
 	
-	.page-id-9 #main img {
+	.abtleft,
+	.abtright {
 		float: none;
-		width: 100%;
+		width: auto;
 	}
-	
-	.page-id-9 #main p { margin: 13px 0;}
 	
 	
 	/* CONTACT PAGE */
@@ -260,7 +259,14 @@
 		font-size: 21px;
 		line-height: 28px;
 	}
-
+	
+	
+	/* CONTACT PAGE */
+	
+	.wpf-fifty { width: auto;}
+	
+	.wpf-left,
+	.wpf-right { float: none;}
 }
 
 
